@@ -1,6 +1,5 @@
 package com.ak.comm.converter;
 
-import java.util.Collections;
 import java.util.EnumSet;
 import java.util.List;
 import java.util.Objects;
@@ -11,11 +10,12 @@ import java.util.stream.Stream;
 
 import javax.annotation.Nonnegative;
 import javax.annotation.Nonnull;
+import javax.annotation.OverridingMethodsMustInvokeSuper;
 
 import com.ak.digitalfilter.DigitalFilter;
 import com.ak.digitalfilter.FilterBuilder;
 
-import static com.ak.util.LogUtils.LOG_LEVEL_VALUES;
+import static com.ak.comm.bytes.LogUtils.LOG_LEVEL_VALUES;
 
 public abstract class AbstractConverter<R, V extends Enum<V> & Variable<V>> implements Converter<R, V> {
   @Nonnull
@@ -30,12 +30,12 @@ public abstract class AbstractConverter<R, V extends Enum<V> & Variable<V>> impl
   private Stream<int[]> filteredValues = Stream.empty();
 
   protected AbstractConverter(@Nonnull Class<V> evClass, @Nonnegative double frequency) {
-    this(evClass, frequency, EnumSet.allOf(evClass).stream().map(v -> new int[] {v.ordinal()}).collect(Collectors.toList()));
+    this(evClass, frequency, EnumSet.allOf(evClass).stream().map(v -> new int[] {v.ordinal()}).toList());
   }
 
   AbstractConverter(@Nonnull Class<V> evClass, @Nonnegative double frequency, @Nonnull List<int[]> selectedIndexes) {
     variables = List.copyOf(EnumSet.allOf(evClass));
-    List<DigitalFilter> filters = variables.stream().map(Variable::filter).collect(Collectors.toList());
+    List<DigitalFilter> filters = variables.stream().map(Variable::filter).toList();
 
     digitalFilter = FilterBuilder.parallel(selectedIndexes, filters.toArray(new DigitalFilter[variables.size()]));
     digitalFilter.forEach(ints -> {
@@ -51,7 +51,7 @@ public abstract class AbstractConverter<R, V extends Enum<V> & Variable<V>> impl
 
   @Override
   public final List<V> variables() {
-    return Collections.unmodifiableList(variables);
+    return variables;
   }
 
   @Nonnegative
@@ -69,7 +69,8 @@ public abstract class AbstractConverter<R, V extends Enum<V> & Variable<V>> impl
   }
 
   @Override
-  public final void refresh() {
+  @OverridingMethodsMustInvokeSuper
+  public void refresh(boolean force) {
     digitalFilter.reset();
   }
 
