@@ -5,7 +5,6 @@ import java.util.Arrays;
 import java.util.EnumSet;
 import java.util.List;
 import java.util.concurrent.atomic.AtomicBoolean;
-import java.util.stream.Collectors;
 
 import javax.annotation.Nonnull;
 import javax.measure.Unit;
@@ -35,7 +34,7 @@ public class AperStage3VariableTest {
             5, 0, 0, 0,
             (byte) 0xd0, 0x07, 0, 0},
 
-            new int[] {55678, 301742, 301742, -527215, -527214, -512, -512, 1296, 1728}},
+            new int[] {55442, 330990, 330990, -702471, -702470, 5982, 5982, 1293, 1638}},
     };
   }
 
@@ -54,7 +53,7 @@ public class AperStage3VariableTest {
         }
       }).count();
       if (processed.get()) {
-        Assert.assertEquals(count, 4);
+        Assert.assertEquals(count, 10);
         break;
       }
     }
@@ -70,8 +69,7 @@ public class AperStage3VariableTest {
 
   @Test
   public void testGetUnit() {
-    List<? extends Unit<?>> actual = EnumSet.allOf(AperStage3Variable.class).stream()
-        .map(DependentVariable::getUnit).collect(Collectors.toList());
+    List<? extends Unit<?>> actual = EnumSet.allOf(AperStage3Variable.class).stream().map(DependentVariable::getUnit).toList();
     Assert.assertEquals(actual,
         Arrays.asList(
             MetricPrefix.MILLI(Units.OHM), MetricPrefix.MILLI(Units.OHM), MetricPrefix.MILLI(Units.OHM),
@@ -85,8 +83,7 @@ public class AperStage3VariableTest {
 
   @Test
   public void testOptions() {
-    List<Variable.Option> actual = EnumSet.allOf(AperStage3Variable.class).stream()
-        .flatMap(v -> v.options().stream()).collect(Collectors.toList());
+    List<Variable.Option> actual = EnumSet.allOf(AperStage3Variable.class).stream().flatMap(v -> v.options().stream()).toList();
     Assert.assertEquals(actual,
         Arrays.asList(
             Variable.Option.VISIBLE, Variable.Option.VISIBLE, Variable.Option.VISIBLE,
@@ -101,7 +98,7 @@ public class AperStage3VariableTest {
   @Test
   public void testFilterDelay() {
     double[] actual = EnumSet.allOf(AperStage3Variable.class).stream().mapToDouble(value -> value.filter().getDelay()).toArray();
-    double[] expected = {157.5, 157.5, 157.5, 157.5, 157.5, 0.0, 0.0, 157.5, 157.5};
+    double[] expected = {24.5, 24.5, 24.5, 0.0, 0.0, 0.0, 0.0, 24.5, 24.5};
     Assert.assertEquals(actual, expected, Arrays.toString(actual));
   }
 
